[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
ctrlc = "3.2.3"
libc = "0.2.137"
pnet_base = "0.31.0"
pnet_packet = "0.31.0"
